--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/webp" href="/src/assets/images/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Finance Management System</title>
+    <title>نظام إدارة المساهمين</title>
+    <meta name="description" content="نظام إدارة المساهمين" />
   </head>
   <body>
     <div id="root"></div>
